@@ -317,6 +317,7 @@ AC_LANG_PUSH(C++)
 
 AC_CHECK_HEADERS(tr1/unordered_set tr1/unordered_map)
 AC_CHECK_HEADERS(ext/hash_map ext/hash_set)
+AC_CHECK_HEADERS(byteswap.h)
 AC_CHECK_FUNCS(mallinfo)
 
 # gcc 4.3.0 doesn't recognize the printf attribute on a template
